// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders minos described by props 1`] = `
<div
  id="gameCanvas"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "repeat(10, 1fr)",
      "gridTemplateRows": "repeat(20, 1fr)",
      "height": "20em",
      "width": "10em",
    }
  }
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    id="startGameMenu"
  >
    <button
      type="button"
    >
      START GAME
    </button>
  </div>
</div>
`;

exports[`correctly renders minos described by props 2`] = `
<div
  id="gameCanvas"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "repeat(10, 1fr)",
      "gridTemplateRows": "repeat(20, 1fr)",
      "height": "20em",
      "width": "10em",
    }
  }
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    id="startGameMenu"
  >
    <h2>
      GAME OVER
    </h2>
    <button
      type="button"
    >
      PLAY AGAIN
    </button>
  </div>
</div>
`;

exports[`correctly renders minos described by props 3`] = `
<div
  id="gameCanvas"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "repeat(10, 1fr)",
      "gridTemplateRows": "repeat(20, 1fr)",
      "height": "20em",
      "width": "10em",
    }
  }
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "grey",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
</div>
`;
